# TNG033

lab1/: CMakeLists.txt  main.cpp  set.cpp  set.hpp
lab2/: CMakeLists.txt  expression.cpp  expression.h  logarithm.cpp  logarithm.h  main.cpp  polynomial.cpp  polynomial.h
lab3/: CMakeLists.txt  anagrams_uppgift2_kort.txt  exerc1.cpp  exerc2.cpp  exerc3.cpp  exerc3_given.cpp  out_uppgift1.txt  out_uppgift1_kort.txt  uppgift2_kort.txt
